--- a/Opdracht_7/index.html
+++ b/Opdracht_7/index.html
@@ -39,7 +39,13 @@
 			</ol>
 		</div>
 		
-		<script type="text/javascript" src="jquery-2.2.4.js"></script>
+		<!-- CDN: (server located file) -->
+		<script
+  		src="https://code.jquery.com/jquery-3.3.1.js"
+  		integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+		  crossorigin="anonymous"></script>
+		<!-- Failback: use local file if CDN failes -->  
+  		<script>window.jQuery || document.write('<script src="jquery-2.2.4.js">\x3C/script>')</script>
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>	
